syntax = "proto3";

option csharp_namespace = "GrpcGreeterClient";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

service WpfCommunication{
  rpc GetUserControl1(WpfRequest) returns (WpfReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message WpfRequest {
  string name = 1;
}

message WpfReply{
  int32 handle = 1; 
}
